﻿RELEASE HISTORY

08/05/2015 1.00 beta rev 484-git7 (487 preview)
    - Added missing locale translation entries to locale files
    - Added Cron event wizard and cron event input widget available as AddFeature "cron.text" field type

05/05/2015 1.00 beta rev 484-git6
    - Added confirm popup for "database reset" and "remote routing reset"
    - Updated automation programs to use new Program.AddFeature widgets
    - Added UI widgets for fields created with Program.AddFeature (last method parameter is the type: "text", "slider", "password", "checkbox", "module.text", "store.script", "store.list")
    - Added simple store to Module helper too
    - Added simple key/value persistent store to Program helper class: Program.Store("<store_name>")[.Get("<item_key>") | .Remove("<item_key>") | .List]
    - Fixed encoding bug in input text of module features and program config options (not handling properly double quotes and other characters)
    - Added "Description" field to MIGServiceConfiguration.Interface
    - Added Sunrise/Sunset event raising to Weather Underground app
    - Updated Jint: javascript engine now accepting "camelCase" convention for invoking Helper Classes

30/04/2015 1.00 beta rev 484-git5
    - Updated Pepper1 Z-Wave database
    - MIG Interface driver add-ons can also be installed by entering the add-on package URL
    - Program.Say will now use Pico TTS if installed in the system, otherwise Google Speech API

20/04/2015 1.00 beta rev 484-git4
    - Improved MQTT client app
    - Improved unhandled exceptions trapping/recovery
    - Fixed bug in app module creation
    - Added "Console.Output" to the event log page

19/04/2015 1.00 beta rev 484-git3
    - Added redirection of standard output/error to HG log file
    - Fixed bug in ZWaveLib that was causing the creation of non-existent nodes

16/04/2015 1.00 beta rev 484-git2
    - Added pause to ModuleParameter.WaitUpdate loop
    - Some minor fixes to the UI