@@ -723,6 +723,10 @@
         "every day of week",        
     "cronwizard_dayowselect_eachselected":
         "each selected day of week",        
+"##":
+"## COMMON LOCALES",
+"##":
+"##",
     "common_month_jan":
         "Jan",        
     "common_month_feb":
@@ -766,5 +770,9 @@
     "common_command_ok":
         "Ok",
     "common_command_proceed":
-        "Proceed"
+        "Proceed",
+    "common_command_save":
+        "Save",
+    "common_status_notset":
+        "Not set"    
 }
