@@ -1,0 +1,86 @@
+{
+
+"Program.82.Title":
+"Energy Saving Mode",
+"Program.82.Description":"When enabled, ensures that dimmer level is kept below the configured percentage value.",
+
+    "EnergyManagement.EnergySavingMode":
+        "Enable energy saving mode",
+
+"Program.16.Title":
+"Level Memory",
+"Program.16.Description":"Store and recall last dimmer level.",
+
+    "HomeGenie.LevelMemory":
+        "Recall last light level when switched on",
+    "HomeGenie.LevelMemory.SimulateOnly":
+        "Simulate only",
+
+"Program.35.Title":
+"Scheduled On/Off",
+"Program.35.Description":"Turn on/off a device using HG scheduler.",
+
+    "HomeGenie.ScheduleControl":
+        "Enable scheduled on/off",
+    "HomeGenie.ScheduleOn":
+        "Turn on",
+    "HomeGenie.ScheduleOff":
+        "Turn off",
+
+"Program.90.Title":
+"Security Alarm System",
+"Program.90.Description":"Basic Security Alarm System",
+
+    "HomeGenie.SecurityAlarm":
+        "Use as alarm/strobe",
+
+"Program.145.Title":
+"Smart Lights",
+"Program.145.Description":"Control device by motion detection and enviroment light.",
+
+    "HomeGenie.SmartLights.Enable":
+        "Enable 'Smart Lights' control",
+    "HomeGenie.SmartLights.OnMotionDetect":
+        "Controlled by motion sensor",
+    "HomeGenie.SmartLights.CheckLuminosity":
+        "Controlled by light sensor",
+    "HomeGenie.SmartLights.SwitchOffTimeout":
+        "Turn off after inactivity timeout (seconds)",
+
+"Program.8.Title":
+"Sunrise Colors Scenario",
+"Program.8.Description":"Example scenario for Philips Hue lights.",
+
+    "Scenarios.SunriseColors":
+        "Link to Sunrise Colors scenario",
+
+"Program.36.Title":
+"Timetable",
+"Program.36.Description":"Schedule thermostats, lights and shutters.",
+
+    "TimeTable.Weekend":
+        "Week-end",
+    "TimeTable.Workday":
+        "Work days",
+    "TimeTable.Holiday":
+        "Holidays",
+    "TimeTable.Special":
+        "Special days",
+    "TimeTable.Enable":
+        "Enable timetable",
+
+"Program.112.Title":
+"Automatic turn off",
+"Program.112.Description":"When device is turned on, automatically turn it off after a given delay.",
+
+    "HomeGenie.TurnOffDelay":
+        "Automatic turn off delay (seconds)",
+
+"Program.200.Title":
+"Windows Phone Push Notification Service",
+"Program.200.Description":"Sends toast and tile updates to Windows Phone client.",
+
+    "MobileNotification.SendChanges":
+        "Push notifications to Windows Phone Client"
+
+}
