@@ -1,0 +1,86 @@
+{
+
+"Program.82.Title":
+"Modalità risparmio energetico",
+"Program.82.Description":"Se abilitato, assicura che il livello dei variatori non superi la percentuale configurata.",
+
+    "EnergyManagement.EnergySavingMode":
+        "Abilita modalità risparmio energetico",
+
+"Program.16.Title":
+"Memoria livello",
+"Program.16.Description":"Memorizza e ripristina livello.",
+
+    "HomeGenie.LevelMemory":
+        "Ripristina l'ultimo livello all'accensione",
+    "HomeGenie.LevelMemory.SimulateOnly":
+        "Simula soltanto",
+
+"Program.35.Title":
+"On/Off pianificato",
+"Program.35.Description":"Accensione/spegnimento del dispositivo utilizzando lo scheduler di HG.",
+
+    "HomeGenie.ScheduleControl":
+        "Abilita accensione/spegnimento automatico",
+    "HomeGenie.ScheduleOn":
+        "Accendi",
+    "HomeGenie.ScheduleOff":
+        "Spegni",
+
+"Program.90.Title":
+"Sistema di allarme",
+"Program.90.Description":"Sistema di allarme base",
+
+    "HomeGenie.SecurityAlarm":
+        "Usa come allarme/strobo",
+
+"Program.145.Title":
+"Smart Lights",
+"Program.145.Description":"Controlla il dispositivo con sensori di movimento e luce.",
+
+    "HomeGenie.SmartLights.Enable":
+        "Abilita controllo 'Smart Lights'",
+    "HomeGenie.SmartLights.OnMotionDetect":
+        "Controlla con sensore movimento",
+    "HomeGenie.SmartLights.CheckLuminosity":
+        "Controlla con sensore luce",
+    "HomeGenie.SmartLights.SwitchOffTimeout":
+        "Spegni dopo un periodo di inattività (secondi)",
+
+"Program.8.Title":
+"Scenario alba",
+"Program.8.Description":"Scenario di esempio per le luci Philips Hue.",
+
+    "Scenarios.SunriseColors":
+        "Collega a scenario Sunrise Colors",
+
+"Program.36.Title":
+"Tabella oraria",
+"Program.36.Description":"Pianificazione termostati, luci, elettrodomestici e avvolgibili.",
+
+    "TimeTable.Weekend":
+        "Fine settimana",
+    "TimeTable.Workday":
+        "Giorni lavorativi",
+    "TimeTable.Holiday":
+        "Vacanze",
+    "TimeTable.Special":
+        "Giorni speciali",
+    "TimeTable.Enable":
+        "Abilita tabella oraria",
+
+"Program.112.Title":
+"Spegnimento automatico",
+"Program.112.Description":"Spegnimento automatico del dispositivo dopo un certo tempo.",
+
+    "HomeGenie.TurnOffDelay":
+        "Ritardo spegimento automatico (secondi)",
+
+"Program.200.Title":
+"Servizio di notifiche push per Windows Phone",
+"Program.200.Description":"Invia aggiornamenti 'toast' e 'tile' al client  Windows Phone.",
+
+    "MobileNotification.SendChanges":
+        "Notifiche push su client Windows Phone"
+
+}
