@@ -28,7 +28,7 @@
             <fieldset data-role="fieldcontain" style="border:solid 1px gray;margin:10px;padding:10px;font-family:monospace;font-size:9pt;">
                 <div class="ui-grid-a">
                     <div data-locale-id="home_about_version" class="ui-block-a" style="width:27%">version&nbsp;&nbsp;</div>
-                    <div class="ui-block-b" style="width:73%">&nbsp;&nbsp;1.00 beta r487</div>
+                    <div class="ui-block-b" style="width:73%">&nbsp;&nbsp;1.00 beta r488</div>
                 </div>
                 <div class="ui-grid-a">
                     <div data-locale-id="home_about_codename" class="ui-block-a" style="width:27%">codename&nbsp;&nbsp;</div>
