@@ -13,9 +13,10 @@
     bind: function() {
         var element = this.element;
         var context = this.context;
+        var description = HG.WebApp.Locales.GetLocaleString(context.parameter.Name, context.parameter.Description);
         var html = element.html();
         html = html.replace(/{id}/g, context.parameter.Index);
-        html = html.replace(/{description}/g, context.parameter.Description);
+        html = html.replace(/{description}/g, description);
         element.html(html);
         var addButton = element.find('[data-ui-field=addbutton]');
         var editButton = element.find('[data-ui-field=editbutton]');
