@@ -1,5 +1,9 @@
 ﻿RELEASE HISTORY
 
+09/05/2015 1.00 beta rev 484-git8
+    - Added localization of module features and programs title/description
+    - Added postback call to automation programs when a module option/feature is changed from the UI
+
 08/05/2015 1.00 beta rev 484-git7 (487 preview)
     - Added missing locale translation entries to locale files
     - Added Cron event wizard and cron event input widget available as AddFeature "cron.text" field type
